objects/Sales_Plan__c.object
<CustomObject>
    <fields>
        <fullName>SP_Account_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SP Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Plan</relationshipLabel>
        <relationshipName>Sales_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SP_Amount__c</fullName>
        <label>SP Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SP_Close_Date__c</fullName>
        <label>SP Close Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SP_Offering__c</fullName>
        <label>SP Offering</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASCO DOC Search</fullName>
                </value>
                <value>
                    <fullName>Data Hub</fullName>
                </value>
                <value>
                    <fullName>DOC Label</fullName>
                </value>
                <value>
                    <fullName>DOC NHANES</fullName>
                </value>
                <value>
                    <fullName>DOC Track</fullName>
                </value>
                <value>
                    <fullName>GROWTH</fullName>
                </value>
                <value>
                    <fullName>IHME Data Mart</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SP_Opportunity_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>SP Opportunity ID</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Plan</relationshipLabel>
        <relationshipName>Sales_Plan</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SP_Sales_Type__c</fullName>
        <label>SP Sales Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expansion</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SP_Therapeutic_Area__c</fullName>
        <label>SP Therapeutic Area</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cardiology/Vascular Diseases</fullName>
                </value>
                <value>
                    <fullName>Endocrine/Metabolic</fullName>
                </value>
                <value>
                    <fullName>Gynecology/Obstetrics</fullName>
                </value>
                <value>
                    <fullName>Immunology/Rheumatology</fullName>
                </value>
                <value>
                    <fullName>Infections/Infectious Diseases</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Musculoskeletal</fullName>
                </value>
                <value>
                    <fullName>Nephrology/Urology</fullName>
                </value>
                <value>
                    <fullName>Neurology</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Ophthalmology</fullName>
                </value>
                <value>
                    <fullName>Psychiatry/Psychology</fullName>
                </value>
                <value>
                    <fullName>Pulmonary/Respiratory Diseases</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales Plan</label>
    <nameField>
        <displayFormat>SP{00000}</displayFormat>
        <label>Sales Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>